@@ -35,7 +35,7 @@ static constexpr unsigned char geometry_counts[] = {
   8, 8, 8, 8, 8, 8,
   9, 5, 12, 24, 12,
   12, 9, 8, 4, 4, 4, 4,
-  8, 16,
+  8, 16, 15,
 };
 
 namespace InfoBoxLayout
@@ -212,6 +212,22 @@ InfoBoxLayout::Calculate(PixelRect rc, InfoBoxSettings::Geometry geometry)
                                rc.top + 3 * layout.control_size.cy, rc.bottom);
     break;
 
+  case InfoBoxSettings::Geometry::LEFT_12_RIGHT_3_VARIO:
+    layout.vario.left = rc.right - layout.control_size.cx;
+    layout.vario.right = rc.right;
+    layout.vario.top = 0;
+    layout.vario.bottom = layout.vario.top + layout.control_size.cy * 3;
+
+    rc.right = MakeRightColumn(layout, layout.positions + 6, 3, rc.right,
+                               rc.top + 3 * layout.control_size.cy, rc.bottom);
+
+    layout.control_size.cx = layout.control_size.cy * 1.1;
+    rc.left = MakeLeftColumn(layout, layout.positions, 6,
+                             rc.left, rc.top, rc.bottom);
+    rc.left = MakeLeftColumn(layout, layout.positions + 9, 6,
+                             rc.left, rc.top, rc.bottom);
+    break;
+
   case InfoBoxSettings::Geometry::BOTTOM_RIGHT_12:
   case InfoBoxSettings::Geometry::OBSOLETE_BOTTOM_RIGHT_12:
     if (layout.landscape) {
@@ -327,6 +343,7 @@ InfoBoxLayout::ValidateGeometry(InfoBoxSettings::Geometry geometry,
     case InfoBoxSettings::Geometry::OBSOLETE_BOTTOM_RIGHT_12:
     case InfoBoxSettings::Geometry::TOP_LEFT_12:
     case InfoBoxSettings::Geometry::LEFT_6_RIGHT_3_VARIO:
+    case InfoBoxSettings::Geometry::LEFT_12_RIGHT_3_VARIO:
       break;
 
     case InfoBoxSettings::Geometry::BOTTOM_8_VARIO:
@@ -374,6 +391,9 @@ InfoBoxLayout::ValidateGeometry(InfoBoxSettings::Geometry geometry,
       break;
 
     case InfoBoxSettings::Geometry::LEFT_6_RIGHT_3_VARIO:
+      return InfoBoxSettings::Geometry::BOTTOM_8_VARIO;
+
+    case InfoBoxSettings::Geometry::LEFT_12_RIGHT_3_VARIO:
       return InfoBoxSettings::Geometry::BOTTOM_8_VARIO;
 
     case InfoBoxSettings::Geometry::BOTTOM_8_VARIO:
@@ -463,6 +483,13 @@ InfoBoxLayout::CalcInfoBoxSizes(Layout &layout, PixelSize screen_size,
     layout.control_size.cy = screen_size.cy / 6;
     // preserve relative shape
     layout.control_size.cx = layout.control_size.cy * 1.44;
+    break;
+
+  case InfoBoxSettings::Geometry::LEFT_12_RIGHT_3_VARIO:
+    // calculate control dimensions
+    layout.control_size.cy = screen_size.cy / 6;
+    // preserve relative shape
+    layout.control_size.cx = layout.control_size.cy * 1.35;
     break;
 
   case InfoBoxSettings::Geometry::RIGHT_5:
@@ -591,6 +618,15 @@ InfoBoxLayout::GetBorder(InfoBoxSettings::Geometry geometry, bool landscape,
     if (i != 0)
       border |= BORDERTOP;
     if (i < 6)
+      border |= BORDERRIGHT;
+    else
+      border |= BORDERLEFT;
+    break;
+
+  case InfoBoxSettings::Geometry::LEFT_12_RIGHT_3_VARIO:
+    if (!((i == 0) ||(i == 9)))
+      border |= BORDERTOP;
+    if (i < 12)
       border |= BORDERRIGHT;
     else
       border |= BORDERLEFT;
